--- a/views/lastfm.ejs
+++ b/views/lastfm.ejs
@@ -8,4 +8,12 @@
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
   </body>
+<script type="text/javascript">
+	
+
+  var myVar = <%- JSON.stringify(title) %>;
+  var lfmData = <%- JSON.stringify(lastFmData) %>;
+
+  console.log(lfmData);
+</script>
 </html>
