--- a/views/lastfm.ejs
+++ b/views/lastfm.ejs
@@ -6,18 +6,18 @@
   </head>
   <body>
     <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <p><%= user.name %> Welcome to <%= title %></p>
+
+
     <button onclick="window.location='/lastFm/userrecentracks'"> Recent Tracks </button>
     <button onclick="window.location='/lastFm/topartists'"> Top Artist </button>
 
+
   </body>
-<script type="text/javascript">
+  <script type="text/javascript" src="/javascripts/lastFmView.js"></script>
 
-  var topTracks = <%- JSON.stringify(lastFmDataTracks) %>;
-  console.log(topTracks);
+  <script type="text/javascript">
+ 	loadData(<%- JSON.stringify(data) %>)
 
-  var topArtist = <%- JSON.stringify(topArtistList) %>;
-  console.log(topArtist);
-
-</script>
+  </script>
 </html>
