--- a/views/lastfm.ejs
+++ b/views/lastfm.ejs
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title><%= title %></title>
+    
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
@@ -27,10 +28,10 @@
             <button class="btn btn-default" onclick="window.location='/lastFm/topartists'"> Top Artist </button>
           </div>
           <div class="col-md-6 col-xs-12">
-            <form class="form-inline">
+            <form method="post" action="/lastFm/username" class="form-inline">
                   <div class="form-group">
                     <label for="friend">Type Friend:</label>
-                    <input type="text" class="form-control" id="friend" placeholder="montredavis">
+                    <input type="text" class="form-control" id="friend" name="username" placeholder="Enter a user name">
                   </div>
                 <button type="submit" class="btn btn-default">Submit</button>
             </form>
