--- a/views/lastfm.ejs
+++ b/views/lastfm.ejs
@@ -8,6 +8,7 @@
     <title><%= title %></title>
     
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.2/css/bootstrap-select.min.css">
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
@@ -22,18 +23,21 @@
         </div>
 
         <div class="row">
-          <div class="col-md-6 col-xs-12">
+          <div class="col-md-12 col-xs-12">
             <button class="btn btn-default" onclick="window.location='/lastFm/userrecentracks'"> Recent Tracks </button>
           
             <button class="btn btn-default" onclick="window.location='/lastFm/topartists'"> Top Artist </button>
 
-            <button class="btn btn-default" onclick="window.location='/lastFm/getAllUserTracks'"> Get and Save All User Tracks </button>
+            <button class="btn btn-default" onclick="window.location='/lastFm/username'"> Get and Save All User Tracks </button>
           </div>
-          <div id="userForm" class="col-md-6 col-xs-12">
+          <div id="userForm" class="col-md-12 col-xs-12">
             <form method="post" action="/lastFm/username" class="form-inline">
                   <div class="form-group">
                     <label for="friend">Type Friend:</label>
-                    <input type="text" class="form-control" id="friend" name="username" placeholder="Enter a user name">
+                    <input type="text" class="form-control" id="friend" name="username" placeholder="montredavis" text="montredavis">
+                    <select id="dbSelector" name="dbTable">
+                      
+                    </select> 
                   </div>
                 <button type="submit" class="btn btn-default">Submit</button>
             </form>
@@ -54,6 +58,7 @@
 
   <!-- bootstrap -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.2/js/bootstrap-select.min.js"></script>
   
   <!-- socket io -->
   <script src="http://localhost:8080/socket.io/socket.io.js"></script>
