--- a/views/spotify.ejs
+++ b/views/spotify.ejs
@@ -25,7 +25,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.2/js/bootstrap-select.min.js"></script>
   
   <!-- socket io -->
-  <!-- <script src="http://localhost:8080/socket.io/socket.io.js"></script> -->
+  <script src="http://localhost:8000/socket.io/socket.io.js"></script>
 
   <!-- custom js -->
   <script type="text/javascript" src="/javascripts/spotifyView.js"></script>
